Fix share alignment

--- a/src/App.css
+++ b/src/App.css
@@ -135,7 +135,11 @@
   }
 }
 
-
+.fb-share-button {
+  vertical-align: top;
+  margin-right: 5px;
+  margin-left: 5px;
+}
 
 /* Cross-fade transition */
 
